--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!--<script src="https://use.fontawesome.com/3db17f620f.js"></script>-->
 </head>
 <body>
+  <p id="printy"></p>
 </body>
 <script src="index.js">
 </script>
