include first attempt at twitch bar at top to adhere to branding

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <!--<script src="https://use.fontawesome.com/3db17f620f.js"></script>-->
 </head>
 <body>
+  <div class="twitch-bar">
+    <div class="logo-size">
+    <img src="https://www.twitch.tv/p/assets/uploads/twitch_474x356.png" class="twitch">
+    </div>
+  </div>
+  <br>
   <p id="printy"></p>
 </body>
 <script src="index.js">
