some reverted changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     </div>
   </div>
   <br>
-  <p id="printy"></p>
+  <div class="container">
+    <div class="row">
+        <center>
+        <p id="printy" class="container-align"></p>
+        </center>
+  </div>
 </body>
 <script src="index.js">
 </script>
