change getJSON into ajax calls

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="row">
         <center>
         <p id="printy" class="container-align"></p>
+        <p id="printytwo" class="container-align"></p>
         </center>
   </div>
 </body>
