update index.js and redo functionality and change basic design to cards

--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
   </div>
   <br>
   <div class="container">
-    <div class="row">
-        <center>
-        <p id="printy" class="container-align"></p>
-        <p id="printytwo" class="container-align"></p>
-        </center>
+    <div class="card-size">
+      <div id="printy" class="container-align"></div>
+    </div>
   </div>
 </body>
 <script src="index.js">
